// Copyright Â© 2023 OpenIM. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package OpenIMServer.conversation;
import "sdkws/sdkws.proto";
import "wrapperspb/wrapperspb.proto";
option go_package = "github.com/OpenIMSDK/protocol/conversation";

message Conversation{
  string ownerUserID = 1;
  string conversationID = 2;
  int32 recvMsgOpt = 3;
  int32 conversationType = 4;
  string userID = 5;
  string groupID = 6;
  bool isPinned = 7;
  string attachedInfo = 8;
  bool isPrivateChat = 9;
  int32 groupAtType = 10;
  string ex = 11;
  int32 burnDuration = 12;
  int64 minSeq = 13;
  int64 maxSeq = 14;
  int64 msgDestructTime = 15;
  int64 latestMsgDestructTime = 16;
  bool isMsgDestruct = 17;
}

message ConversationReq{
  string conversationID = 1;
  int32 conversationType = 2;
  string userID = 3;
  string groupID = 4;
  OpenIMServer.protobuf.Int32Value recvMsgOpt = 5;
  OpenIMServer.protobuf.BoolValue isPinned = 6;
  OpenIMServer.protobuf.StringValue attachedInfo = 7;
  OpenIMServer.protobuf.BoolValue isPrivateChat = 8;
  OpenIMServer.protobuf.StringValue ex = 9;
  OpenIMServer.protobuf.Int32Value burnDuration = 10;
  OpenIMServer.protobuf.Int64Value minSeq = 11;
  OpenIMServer.protobuf.Int64Value maxSeq = 12;
  OpenIMServer.protobuf.Int32Value groupAtType = 13;
  OpenIMServer.protobuf.Int64Value msgDestructTime = 14;
  OpenIMServer.protobuf.BoolValue isMsgDestruct = 15;
  OpenIMServer.protobuf.Int64Value latestMsgSendTime = 16;
}

message SetConversationReq{
  Conversation conversation = 1;
}

message SetConversationResp{
}

message GetConversationReq{
  string conversationID = 1;
  string ownerUserID = 2;
}

message GetConversationResp{
  Conversation conversation = 2;
}

message GetSortedConversationListReq{
  string userID = 1;
  repeated string conversationIDs = 2;
  sdkws.RequestPagination pagination = 3;
}

message GetSortedConversationListResp{
  int64 conversationTotal = 1;
  int64 unreadTotal = 2;
  repeated ConversationElem conversationElems = 3;

}

message ConversationElem {
  string conversationID = 1;
  int32 conversationType = 2;
  string userID = 3;
  string groupID = 4;
  string showName = 5;
  string faceURL = 6;
  int32 recvMsgOpt = 7;
  int64 unreadCount = 8;
  int32 groupAtType = 9;
  string latestMsg = 10;
  int64 latestMsgSendTime = 11;
  string draftText = 12;
  int64 draftTextTime = 13;
  bool IsPinned = 14;
  bool isPrivateChat = 15;
  int32 burnDuration = 16;
  bool isNotInGroup = 17;
  int64 updateUnreadCountTime = 18;
  string attachedInfo = 19;
  string ex = 20;
  int64 maxSeq = 21;
  int64 minSeq = 22;
  int64 hasReadSeq = 23;
  int64 msgDestructTime = 24;
  bool isMsgDestruct = 25;
  int32 groupMemberCount =26;
  MsgInfo msgInfo = 27;
  int64 Seq = 28;
}

message MsgInfo{
  string serverMsgID = 1;
  string clientMsgID = 2;
  int32 sessionType = 3;
  string sendID = 4;
  string recvID = 5;
  string senderName = 6;
  string faceURL = 7;
  string groupID = 8;
  string groupName = 9;
  string groupFaceURL = 10;
  int32 groupType = 11;
  uint32 groupMemberCount = 12;
  int64 LatestMsgRecvTime = 13;
  int32 msgFrom = 14;
  int32 contentType = 15;
  string content = 16;
}

message GetConversationsReq{
  string ownerUserID = 1;
  repeated string conversationIDs = 2;
}

message GetConversationsResp{
  repeated Conversation conversations = 2;
}

message GetAllConversationsReq{
  string ownerUserID = 1;
}

message GetAllConversationsResp{
  repeated Conversation conversations = 2;
}


message GetRecvMsgNotNotifyUserIDsReq {
  string groupID = 1;
}

message GetRecvMsgNotNotifyUserIDsResp {
  repeated string userIDs = 1;
}

message CreateSingleChatConversationsReq {
  string recvID = 1;
  string sendID = 2;
  string conversationID = 3;
  int32 conversationType = 4;
}

message CreateSingleChatConversationsResp {
}

message CreateGroupChatConversationsReq {
  repeated string userIDs = 1;
  string groupID = 2;
}

message CreateGroupChatConversationsResp {
}

message SetConversationMaxSeqReq {
  string conversationID = 1;
  repeated string ownerUserID = 2;
  int64 maxSeq = 3;
}

message SetConversationMaxSeqResp {
}

message GetConversationIDsReq {
  string userID = 1;
}

message GetConversationIDsResp {
  repeated string conversationIDs = 1;
}



message SetConversationsReq {
  repeated string userIDs = 1;
  ConversationReq conversation = 2;
}

message SetConversationsResp {
}

message GetUserConversationIDsHashReq {
  string ownerUserID = 1;
}

message GetUserConversationIDsHashResp {
  uint64 hash = 1;
}

message GetConversationsByConversationIDReq {
  repeated string conversationIDs = 1;
}

message GetConversationsByConversationIDResp {
  repeated Conversation conversations = 1;
}

message GetConversationOfflinePushUserIDsReq {
  string conversationID = 1;
  repeated string userIDs = 2;
}

message GetConversationOfflinePushUserIDsResp {
  repeated string userIDs = 1;
}

service conversation {
  rpc GetConversation(GetConversationReq)returns(GetConversationResp);
  rpc GetSortedConversationList(GetSortedConversationListReq)returns(GetSortedConversationListResp);
  rpc GetAllConversations(GetAllConversationsReq)returns(GetAllConversationsResp);
  rpc GetConversations(GetConversationsReq)returns(GetConversationsResp);
  rpc SetConversation(SetConversationReq)returns(SetConversationResp);
  rpc GetRecvMsgNotNotifyUserIDs(GetRecvMsgNotNotifyUserIDsReq) returns (GetRecvMsgNotNotifyUserIDsResp);
  rpc CreateSingleChatConversations(CreateSingleChatConversationsReq) returns (CreateSingleChatConversationsResp);
  rpc CreateGroupChatConversations(CreateGroupChatConversationsReq) returns (CreateGroupChatConversationsResp);
  rpc SetConversationMaxSeq(SetConversationMaxSeqReq) returns(SetConversationMaxSeqResp);
  rpc GetConversationIDs(GetConversationIDsReq) returns(GetConversationIDsResp);
  rpc SetConversations(SetConversationsReq) returns(SetConversationsResp);
  rpc GetUserConversationIDsHash(GetUserConversationIDsHashReq) returns(GetUserConversationIDsHashResp);
  rpc GetConversationsByConversationID(GetConversationsByConversationIDReq) returns(GetConversationsByConversationIDResp);
  rpc GetConversationOfflinePushUserIDs(GetConversationOfflinePushUserIDsReq) returns(GetConversationOfflinePushUserIDsResp);
}
